--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -19,3 +19,17 @@ form p.end-link {
 .form-register input {
 	margin-bottom: 10px;
 }
+
+.sidebar {
+	position: fixed;
+	top: 51px;
+	bottom: 0;
+	left: 0;
+	z-index: 1000;
+	display: block;
+	padding: 20px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	background-color: #f5f5f5;
+	border-right: 1px solid #eee;
+}
