--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -55,6 +55,10 @@ form p.end-link {
 	color: #fff;
 	background-color: #428bca;
 }
+.nav-sidebar > .active > a:hover {
+	color: #666;
+	background-color: #428bca;
+}
 .admin .main {
 	padding: 20px 40px 20px 40px;
 }
