--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -1,3 +1,13 @@
 body {
 	padding-top: 50px;
 }
+
+footer {
+	background-color: #666;
+	background-color: rgba(0,0,0,0.7);
+	color: #DDD;
+	padding: 20px 0;
+}
+footer .cointainer {
+	margin-top: 8px;
+}
