--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -6,7 +6,7 @@ footer {
 	background-color: #666;
 	background-color: rgba(0,0,0,0.5);
 	color: #DDD;
-	padding: 20px 0;
+	padding: 0;
 	position: fixed;
 	bottom: 0;
 	left: 0;
