minor css tweaks

--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -1,3 +1,9 @@
+header {
+	background: #222;
+}
+header .navbar {
+	margin-bottom: 0;
+}
 footer {
 	background-color: #666;
 	background-color: rgba(0,0,0,0.5);
