--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -17,7 +17,7 @@ header .navbar .container {
 }
 footer {
 	background-color: #666;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0,0,0,0.7);
 	color: #EEE;
 	padding: 10px 0;
 }
@@ -29,9 +29,11 @@ footer .container .pull-right a {
 	color: #EEE;
 }
 div.content {
-	background: rgba(0,0,0,0.3);
+	background: rgba(0,0,0,0.4);
+	padding: 20px;
 }
 div.sidebar {
-	background: rgba(0,0,0,0.5);
+	background: rgba(0,0,0,0.7);
 	color: #EEE;
+	padding: 20px;
 }
