--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -18,7 +18,7 @@ header .navbar .container {
 footer {
 	background-color: #666;
 	background-color: rgba(0,0,0,0.7);
-	color: #EEE;
+	color: #DDD;
 	padding: 10px 0;
 }
 footer .container {
@@ -26,14 +26,15 @@ footer .container {
 }
 footer .container .pull-right a:visited,
 footer .container .pull-right a {
-	color: #EEE;
+	color: #DDD;
 }
 div.content {
 	background: rgba(0,0,0,0.4);
+	color: #EEE;
 	padding: 20px;
 }
 div.sidebar {
 	background: rgba(0,0,0,0.7);
-	color: #EEE;
+	color: #DDD;
 	padding: 20px;
 }
