--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -22,11 +22,15 @@ header .navbar {
 header .navbar .container {
 	padding-left: 0;
 }
+div.page-title h2 {
+	color: #FFF;
+}
 footer {
 	background-color: #666;
 	background-color: rgba(0,0,0,0.7);
 	color: #DDD;
 	padding: 10px 0;
+	border-top: rgba(0,0,0,0.1) solid;
 }
 footer .container {
 	margin-top: 8px;
