--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -31,6 +31,7 @@ footer {
 	color: #DDD;
 	padding: 10px 0;
 	border-top: rgba(0,0,0,0.1) solid;
+	margin-top: 20px;
 }
 footer .container {
 	margin-top: 8px;
