--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -88,6 +88,6 @@ form p.end-link {
 #pf-content-wrap textarea,
 #pf-sidebar-wrap textarea {
 	width: 100%;
-	height: 100%;
+	height: 400px;
 	resize: none;
 }
