--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -5,8 +5,7 @@ body.admin {
 	padding-top: 50px;
 }
 .admin .row {
-	margin-left: -15px;
-	margin-right: -15px;
+	margin: 0;
 }
 .navbar-nav.navbar-right:last-child {
 	margin-right: 15px;
