--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -1,3 +1,8 @@
+.btn-top-right {
+	position: absolute;
+	top: 12px;
+	right: 40px;
+}
 body.forms {
 	background: #DDD;
 }
@@ -65,11 +70,6 @@ form p.end-link {
 	margin-top: 0;
 }
 /* Editor styling */
-#pf-submit {
-	position: absolute;
-	top: 12px;
-	right: 40px;
-}
 #pf-editors-wrap {
 	position: relative;
 	height: 550px;
