--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -95,3 +95,7 @@ form p.end-link {
 	height: 500px;
 	resize: none;
 }
+#gallery-image-list .gi {
+	display: inline-block;
+	border: 2px solid #666;
+}
