Gallery css tweaks

--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -101,4 +101,18 @@ form p.end-link {
 #gallery-images .gi {
 	display: inline-block;
 	border: 2px solid #666;
+	position: relative;
+}
+#gallery-image .gi .gi-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #333;
+	background: rgba(0,0,0,0.7);
+	opacity: 0;
+}
+#gallery-image .gi .gi-overlay:hover {
+	opacity: 1;
 }
