--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -122,3 +122,10 @@ form p.end-link {
 #gallery-images .gi .gi-overlay:hover {
 	opacity: 1;
 }
+#gallery-images .gi-overlay .gi-delete {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -29px;
+	margin-top: -15px;
+}
