--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -122,6 +122,14 @@ form p.end-link {
 #gallery-images .gi .gi-overlay:hover {
 	opacity: 1;
 }
+#gallery-images .gi-overlay .gi-title {
+	color: #EEE;
+	text-align: center;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	right: 10px;
+}
 #gallery-images .gi-overlay .gi-delete {
 	position: absolute;
 	top: 50%;
