--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -4,11 +4,15 @@ header {
 header .titlebar {
 	height: 100px;
 }
-header .titlebar img.logo {
+header .titlebar .logo {
 	height: 60px;
 	width: 96px;
 	position: absolute;
 	top: 20px;
+}
+header .titlebar .logo img {
+	max-height: 60px;
+	max-width: 96px;
 }
 header .titlebar h1 {
 	color: #DDD;
