--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -9,6 +9,7 @@ header .titlebar .logo {
 	width: 96px;
 	position: absolute;
 	top: 20px;
+	text-align: center;
 }
 header .titlebar .logo img {
 	max-height: 60px;
