--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -65,3 +65,21 @@ div.sidebar {
 	top: -45px;
 	right: 15px;
 }
+.loading {
+	display: none;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	z-index: 9001;
+	background: rgba(255,255,255,0.7);
+}
+.loading img {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -16px;
+	margin-top: -16px;
+	z-index: 9002;
+}
