--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -85,7 +85,7 @@ div.sidebar {
 }
 /* Lost and found styling */
 #lost-and-found .lnf {
-	margin: 0 20px;
+	margin: 10px 20px 0 20px;
 	border: 1px solid black;
 	max-height: 160px;
 	position: relative;
@@ -93,10 +93,10 @@ div.sidebar {
 }
 .lnf .lnf-title {
 	position: absolute;
-	border-bottom: 1px solid black;
 	left: 211px;
 	right: 0;
 	height: 30px;
+	background: rgba(0,0,0,0.1);
 }
 .lnf .lnf-title p {
 	font-size: 16px;
@@ -108,13 +108,14 @@ div.sidebar {
 	top: 0;
 	left: 0;
 	width: 211px;
-	height: 160px;
+	height: 159px;
 	text-align: center;
 	border-right: 1px solid black;
+	background: rgba(0,0,0,0.1);
 }
 .lnf .lnf-image img {
 	max-width: 211px;
-	max-height: 158px;
+	height: 157px;
 }
 .lnf .lnf-desc {
 	position: absolute;
