--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -85,7 +85,7 @@ div.sidebar {
 }
 /* Lost and found styling */
 #lost-and-found .lnf {
-	margin: 10px 20px 0 20px;
+	margin: 10px 0 0 0;
 	border: 1px solid black;
 	max-height: 160px;
 	position: relative;
