--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -154,6 +154,7 @@ form p.end-link {
 	min-height: 160px;
 }
 .lnf .lnf-overlay {
+	opacity: 0;
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -161,6 +162,9 @@ form p.end-link {
 	bottom: 0;
 	background: rgba(0,0,0,0.7);
 	z-index: 1;
+}
+.lnf .lnf-overlay:hover {
+	opacity: 1;
 }
 .lnf .lnf-overlay .lnf-tools {
 	position: absolute;
