--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -209,6 +209,8 @@ form p.end-link {
 }
 .lnf .lnf-desc .wrap {
 	padding: 10px;
+	overflow-y: auto;
+	max-height: 106px;
 }
 .lnf .lnf-desc .wrap .content {
 	font-size: 13px;
