Sponsor an animal admin page barebones

--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -255,3 +255,9 @@ form p.end-link {
 #lnf-settings .submit {
 	text-align: right;
 }
+#sa-settings {
+	margin-bottom: 20px;
+}
+#sa-settings .submit {
+	text-align: right;
+}
