--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -347,6 +347,7 @@ form p.end-link {
 	right: 0;
 	height: 26px;
 	background: rgba(0,0,0,0.1);
+	text-align: right;
 }
 .sa .sa-footer p {
 	font-size: 11px;
