--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -210,6 +210,11 @@ div.sidebar {
 	font-size: 11px;
 	margin: 3px 10px;
 }
+.sa .sa-footer .sponsor-animal-amount {
+	text-align: right;
+	padding-right: 5px;
+	width: 60px;
+}
 .blankSlate {
 	text-align: center;
 }
