--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -45,6 +45,12 @@ footer .contact-details p {
 	margin: 0;
 	color: #FFF;
 }
+footer .footer-donate-amount {
+	display: block;
+	text-align: right;
+	padding-right: 5px;
+	width: 147px;
+}
 footer .container .pull-right a:visited,
 footer .container .pull-right a {
 	color: #DDD;
