--- a/core/css/charity.css
+++ b/core/css/charity.css
@@ -66,6 +66,9 @@ div.sidebar {
 	background: rgba(255,255,255,0.5);
 	padding: 20px;
 }
+#noResults {
+	display: none;
+}
 #lnf-modal-toggle {
 	position: absolute;
 	top: -45px;
