--- a/core/css/main.css
+++ b/core/css/main.css
@@ -9,6 +9,14 @@ header {
 	background-position: 50%;
 	position: relative;
 }
+header .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0,0,0,0.3);
+}
 header h1 {
 	text-align: center;
 	margin-top: 150px;
